clusters/pibox/apps/grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
      containers:
        - name: grafana
          image: docker.io/grafana/grafana:13.2.3@sha256:b28bae15e219c998fb0e0424ed724930cc61b1f61fb404d47c862f9a23f9e572
          securityContext:
            runAsNonRoot: true
            runAsUser: 472
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              memory: 512Mi
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: grafana-pv
              mountPath: /var/lib/grafana
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
