clusters/pibox/apps/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: grafana-grafana-fail2ban@kubernetescrd
spec:
  rules:
    - host: grafana.paas.lsedlar.cz
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  name: http
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - grafana.paas.lsedlar.cz
      secretName: grafana-ingress
